# pvr.teleboy

./: .gitignore  .openelec-unpack  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
pvr.teleboy/: addon.xml.in  changelog.txt
pvr.teleboy/resources/: eit_categories.txt  settings.xml
pvr.teleboy/resources/language/resource.language.de_de/: strings.po
pvr.teleboy/resources/language/resource.language.en_gb/: strings.po
src/: Cache.cpp  Curl.cpp  Curl.h  JsonParser.cpp  JsonParser.h  Session.cpp  Session.h  TeleBoy.cpp  TeleBoy.h  UpdateThread.cpp  UpdateThread.h  Utils.cpp  Utils.h  categories.cpp  client.cpp  client.h
src/http/: Cache.cpp  Curl.cpp  HttpClient.cpp  HttpClient.h
src/sql/: ParameterDB.cpp  SQLConnection.h
